# Playground

.omx/: metrics.json
fintech-management-system/: Makefile  (+3 more)
fintech-management-system/backend/: .dockerignore  Dockerfile  README.md  alembic.ini  dev.db  pyproject.toml
fintech-management-system/backend/alembic/versions/: 20260318_0001_baseline.py  20260322_0002_org_hierarchy.py  20260323_0003_normalize_userrole_enum.py  20260323_0004_drop_payment_unique_for_partials.py
fintech-management-system/backend/app/: main.py
fintech-management-system/backend/app/api/: deps.py
fintech-management-system/backend/app/api/v1/: router.py
fintech-management-system/backend/app/core/: config.py  middleware.py  security.py
fintech-management-system/backend/app/models/: __init__.py  entities.py  enums.py
fintech-management-system/backend/app/schemas/: audit.py  auth.py  branch.py  business.py  common.py  company.py  cost.py  customer.py  dashboard.py  invoice.py  payment.py  report.py  user_admin.py  vendor.py  vendor_payment.py
fintech-management-system/backend/app/services/: access_control.py  audit_query_service.py  audit_service.py  auth_service.py  cost_service.py  dashboard_service.py  financial_engine.py  invoice_service.py  payment_service.py  reporting_service.py  scope_service.py  vendor_payment_service.py  vendor_service.py
fintech-management-system/backend/app/utils/: ai_registry.py  demo_seed.py
fintech-management-system/backend/tests/: test_access_control.py  test_api_workflows.py  test_financial_engine.py  test_invoice_lifecycle.py  test_org_hierarchy.py
(+82 files in other folders)
